; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_main.c_hns_dsaf_tbl_tcam_mcast_pul.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_main.c_hns_dsaf_tbl_tcam_mcast_pul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsaf_device = type { i32 }

@DSAF_TBL_PUL_0_REG = common dso_local global i32 0, align 4
@DSAF_TBL_PUL_MCAST_VLD_S = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dsaf_device*)* @hns_dsaf_tbl_tcam_mcast_pul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns_dsaf_tbl_tcam_mcast_pul(%struct.dsaf_device* %0) #0 {
  %2 = alloca %struct.dsaf_device*, align 8
  %3 = alloca i32, align 4
  store %struct.dsaf_device* %0, %struct.dsaf_device** %2, align 8
  %4 = load %struct.dsaf_device*, %struct.dsaf_device** %2, align 8
  %5 = load i32, i32* @DSAF_TBL_PUL_0_REG, align 4
  %6 = call i32 @dsaf_read_dev(%struct.dsaf_device* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @DSAF_TBL_PUL_MCAST_VLD_S, align 4
  %9 = call i32 @dsaf_set_bit(i32 %7, i32 %8, i32 1)
  %10 = load %struct.dsaf_device*, %struct.dsaf_device** %2, align 8
  %11 = load i32, i32* @DSAF_TBL_PUL_0_REG, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @dsaf_write_dev(%struct.dsaf_device* %10, i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @DSAF_TBL_PUL_MCAST_VLD_S, align 4
  %16 = call i32 @dsaf_set_bit(i32 %14, i32 %15, i32 0)
  %17 = load %struct.dsaf_device*, %struct.dsaf_device** %2, align 8
  %18 = load i32, i32* @DSAF_TBL_PUL_0_REG, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @dsaf_write_dev(%struct.dsaf_device* %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @dsaf_read_dev(%struct.dsaf_device*, i32) #1

declare dso_local i32 @dsaf_set_bit(i32, i32, i32) #1

declare dso_local i32 @dsaf_write_dev(%struct.dsaf_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
